maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: value && is not a member of Int
		if (x=0 && !estFaceMur){
                        ^RandomMouseMaze:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=0 && !estFaceMur){
                     ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=1){
                     ^RandomMouseMaze:12: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=2){
                     ^